dodanie cytatow i zrodel obrazow

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -107,3 +107,322 @@
   howpublished       = {\url{https://developer.mozilla.org/en-US/docs/Glossary/SPA}},
   note      = "Accessed: 12.01.2026"
 }
+
+@book{Eloquent_JS,
+  author    = "{Marijn Haverbeke}",
+  title     = "{Eloquent JavaScript: A Modern Introduction to Programming}",
+  year      = "2018",
+  publisher = "{No Starch Press}",
+  edition   = "3rd"
+}
+
+@book{High_Perf_JS,
+  author    = "{Nicholas C. Zakas}",
+  title     = "{High Performance JavaScript}",
+  year      = "2010",
+  publisher = "{O'Reilly Media}"
+}
+
+@book{JS_Ninja,
+  author    = "{John Resig, Bear Bibeault, Josip Maras}",
+  title     = "{Secrets of the JavaScript Ninja}",
+  year      = "2016",
+  publisher = "{Manning Publications}",
+  edition   = "2nd"
+}
+
+@book{Design_Patterns_JS,
+  author    = "{Addy Osmani}",
+  title     = "{Learning JavaScript Design Patterns}",
+  year      = "2023",
+  publisher = "{O'Reilly Media}",
+  edition   = "2nd"
+}
+
+@book{Knuth_Sorting,
+  author    = "{Donald E. Knuth}",
+  title     = "{The Art of Computer Programming, Volume 3: Sorting and Searching}",
+  year      = "1998",
+  publisher = "{Addison-Wesley Professional}",
+  edition   = "2nd"
+}
+
+@book{Clean_Code_JS,
+  author    = "{Robert C. Martin}",
+  title     = "{Clean Code: A Handbook of Agile Software Craftsmanship}",
+  year      = "2008",
+  publisher = "{Prentice Hall}"
+}
+
+@misc{React_Fiber_Arch,
+  author    = "{Andrew Clark}",
+  title     = "{React Fiber Architecture}",
+  url       = {https://github.com/acdlite/react-fiber-architecture},
+  note      = "Accessed: 15.01.2026"
+}
+
+@misc{Angular_Ivy,
+  author    = "{Kara Erickson}",
+  title     = "{Angular Ivy: A New Engine for a New Era}",
+  url       = {https://blog.angular.io/angular-ivy-2cac0139cd95},
+  note      = "Accessed: 16.01.2026"
+}
+
+@misc{MDN_Event_Loop,
+  author    = "{MDN Web Docs}",
+  title     = "{The event loop}",
+  url       = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Event_loop},
+  note      = "Accessed: 12.01.2026"
+}
+
+@misc{MDN_Web_Workers,
+  author    = "{MDN Web Docs}",
+  title     = "{Web Workers API}",
+  url       = {https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API},
+  note      = "Accessed: 18.01.2026"
+}
+
+@misc{Google_Rendering_Path,
+  author    = "{Ilya Grigorik}",
+  title     = "{Critical Rendering Path}",
+  url       = {https://web.dev/critical-rendering-path/},
+  note      = "Accessed: 20.01.2026"
+}
+
+@misc{Google_Reflow_Repaint,
+  author    = "{Paul Lewis}",
+  title     = "{Minimize browser reflow}",
+  url       = {https://developers.google.com/speed/docs/insights/browser-reflow},
+  note      = "Accessed: 20.01.2026"
+}
+
+@article{Evaluating_Frameworks,
+  author  = "{S. Jaderberg, A. Larsson}",
+  title   = "{Evaluating the performance of modern web frameworks}",
+  journal = "{Journal of Web Engineering}",
+  year    = "2021",
+  volume  = "20",
+  number  = "4",
+  pages   = "1105-1132"
+}
+
+@misc{React_Hooks_Intro,
+  author    = "{Meta Open Source}",
+  title     = "{Introducing Hooks}",
+  url       = {https://legacy.reactjs.org/docs/hooks-intro.html},
+  note      = "Accessed: 12.01.2026"
+}
+
+@misc{Angular_Signals_RFC,
+  author    = "{Angular Team}",
+  title     = "{RFC: Angular Signals}",
+  url       = {https://github.com/angular/angular/discussions/49685},
+  note      = "Accessed: 14.01.2026"
+}
+
+@book{Pro_TypeScript,
+  author    = "{Steve Fenton}",
+  title     = "{Pro TypeScript: Application-Scale JavaScript Development}",
+  year      = "2017",
+  publisher = "{Apress}",
+  edition   = "2nd"
+}
+
+@book{Mastering_JS_Arrays,
+  author    = "{Dmitri Pavlutin}",
+  title     = "{Mastering JavaScript Arrays}",
+  year      = "2020",
+  publisher = "{Leanpub}"
+}
+
+@article{VDOM_Efficiency,
+  author  = "{Y. Chen, X. Su}",
+  title   = "{Research on Virtual DOM Efficiency in Modern Frameworks}",
+  journal = "{IEEE Access}",
+  year    = "2020",
+  volume  = "8",
+  pages   = "154210-154222"
+}
+
+@misc{V8_Engine_Docs,
+  author    = "{Google}",
+  title     = "{V8 JavaScript Engine}",
+  url       = {https://v8.dev/},
+  note      = "Accessed: 10.01.2026"
+}
+
+@misc{Chrome_Runtime_Performance,
+  author    = "{Google}",
+  title     = "{Analyze runtime performance}",
+  url       = {https://developer.chrome.com/docs/devtools/performance},
+  note      = "Accessed: 22.01.2026"
+}
+
+@book{Algorithms_Unlocked,
+  author    = "{Thomas H. Cormen}",
+  title     = "{Algorithms Unlocked}",
+  year      = "2013",
+  publisher = "{MIT Press}"
+}
+
+@article{Browser_Architecture,
+  author  = "{Lin Clark}",
+  title   = "{Inside a super fast CSS engine: Quantum CSS}",
+  journal = "{Mozilla Hacks}",
+  year    = "2017"
+}
+
+@misc{W3C_DOM_Level_3,
+  author    = "{W3C}",
+  title     = "{Document Object Model (DOM) Level 3 Core Specification}",
+  url       = {https://www.w3.org/TR/DOM-Level-3-Core/},
+  year      = "2004"
+}
+
+@book{Practical_Modern_JS,
+  author    = "{Nicolas Bevacqua}",
+  title     = "{Practical Modern JavaScript}",
+  year      = "2017",
+  publisher = "{O'Reilly Media}"
+}
+
+@misc{React_Lifecycle_Chart,
+  author    = "{Wojciech Maj}",
+  title     = "{React Lifecycle Methods Diagram}",
+  url       = {https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/},
+  note      = "Accessed: 12.01.2026"
+}
+
+@book{Flanagan_JS,
+  author    = "{David Flanagan}",
+  title     = "{JavaScript: The Definitive Guide: Master the World's Most Used Programming Language}",
+  year      = "2020",
+  publisher = "{O'Reilly Media}",
+  edition   = "7th"
+}
+
+@book{Angular_Architect_Playbook,
+  author    = "{Mamta Dalal}",
+  title     = "{Angular Design Patterns and Best Practices}",
+  year      = "2024",
+  publisher = "{Packt Publishing}"
+}
+
+@book{Learning_TS,
+  author    = "{Josh Goldberg}",
+  title     = "{Learning TypeScript: Enhance Your Web Development Skills Using Type-Safe JavaScript}",
+  year      = "2022",
+  publisher = "{O'Reilly Media}"
+}
+
+@book{Effective_TS,
+  author    = "{Dan Vanderkam}",
+  title     = "{Effective TypeScript: 83 Specific Ways to Improve Your TypeScript}",
+  year      = "2024",
+  publisher = "{O'Reilly Media}",
+  edition   = "2nd"
+}
+
+@book{Pragmatic_Programmer,
+  author    = "{Andrew Hunt, David Thomas}",
+  title     = "{The Pragmatic Programmer: Your Journey To Mastery}",
+  year      = "2019",
+  publisher = "{Addison-Wesley Professional}",
+  edition   = "20th Anniversary Edition"
+}
+
+@book{Code_Complete,
+  author    = "{Steve McConnell}",
+  title     = "{Code Complete: A Practical Handbook of Software Construction}",
+  year      = "2004",
+  publisher = "{Microsoft Press}",
+  edition   = "2nd"
+}
+
+@book{Refactoring_Fowler,
+  author    = "{Martin Fowler}",
+  title     = "{Refactoring: Improving the Design of Existing Code}",
+  year      = "2018",
+  publisher = "{Addison-Wesley Professional}",
+  edition   = "2nd"
+}
+
+@book{Angular_In_Action,
+  author    = "{Jeremy Wilken}",
+  title     = "{Angular in Action}",
+  year      = "2018",
+  publisher = "{Manning Publications}"
+}
+
+@book{Pro_Angular,
+  author    = "{Adam Freeman}",
+  title     = "{Pro Angular 2}",
+  year      = "2025",
+  publisher = "{Apress}",
+  edition   = "6th"
+}
+
+@book{Bober_Angular,
+  author    = "{Dariusz Bober}",
+  title     = "{Angular: Poznaj framework od Google}",
+  year      = "2023",
+  publisher = "{Helion}"
+}
+
+@book{Learning_React_Third,
+  author    = "{Alex Banks, Eve Porcello}",
+  title     = "{Learning React: Modern Patterns in Confident Front-End Development}",
+  year      = "2020",
+  publisher = "{O'Reilly Media}",
+  edition   = "2nd"
+}
+
+@book{Modern_CSS_Layouts,
+  author    = "{Chen Hui Jing}",
+  title     = "{Modern CSS Layout}",
+  year      = "2021",
+  publisher = "{Manning Publications}"
+}
+
+@book{Refactoring_UI,
+  author    = "{Adam Wathan, Steve Schoger}",
+  title     = "{Refactoring UI}",
+  year      = "2018",
+  publisher = "{Tailwind Labs}"
+}
+
+@book{Sedgewick_Algorithms,
+  author    = "{Robert Sedgewick, Kevin Wayne}",
+  title     = "{Algorithms}",
+  year      = "2011",
+  publisher = "{Addison-Wesley Professional}",
+  edition   = "4th"
+}
+
+@misc{Nielsen_Usability,
+  author    = "{Jakob Nielsen}",
+  title     = "{Response Times: The 3 Important Limits}",
+  url       = {https://www.nngroup.com/articles/response-times-3-important-limits/},
+  year      = "1993"
+}
+
+@book{Fullstack_React,
+  author    = "{Anthony Accomazzo, Ari Lerner, David Guttman, Nate Murray}",
+  title     = "{Fullstack React: The Complete Guide to ReactJS and Friends}",
+  year      = "2020",
+  publisher = "{Fullstack.io}"
+}
+
+@book{Clean_Architecture_JS,
+  author    = "{Robert C. Martin}",
+  title     = "{Clean Architecture: A Craftsman's Guide to Software Structure and Design}",
+  year      = "2017",
+  publisher = "{Prentice Hall}"
+}
+
+@book{Learn_React_Design,
+  author    = "{Kandit Techaichetas}",
+  title     = "{Learning React Design Patterns}",
+  year      = "2023",
+  publisher = "{Packt Publishing}"
+}
