Added more sources, extended chapter 2

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -164,7 +164,7 @@
 @misc{Angular_Ivy,
   author    = "{Kara Erickson}",
   title     = "{Angular Ivy: A New Engine for a New Era}",
-  url       = {https://blog.angular.io/angular-ivy-2cac0139cd95},
+  howpublished       = {\url{https://blog.angular.io/angular-ivy-2cac0139cd95}},
   note      = "Accessed: 16.01.2026"
 }
 
@@ -426,3 +426,4 @@
   year      = "2023",
   publisher = "{Packt Publishing}"
 }
+
