--- a/doc/main.tex
+++ b/doc/main.tex
@@ -695,6 +695,8 @@ Całość projektu technicznego oparto na języku TypeScript w wersji 5.6+, co z
 
 Pod względem technologicznym, obie aplikacje muszą korzystać z identycznych bibliotek pomocniczych. Do stylizacji wybrano Tailwind CSS v4 ze względu na jego zero-runtime approach, co gwarantuje, że style są generowane na etapie budowania i nie obciążają przeglądarki podczas pomiarów wydajnościowych. System budowania oparto na Vite jako najnowocześniejszym narzędziu zapewniającym natychmiastowe odświeżanie modułów (\textit{HMR}) i wydajną minifikację produkcyjną (\textit{tree shaking}). Dzięki takiemu podejściu, wszelkie zaobserwowane różnice w wydajności można przypisać bezpośrednio mechanizmom wewnętrznym frameworków (Virtual DOM vs Signals), co stanowi istotę naukową niniejszej pracy.
 
+Ważnym aspektem implementacyjnym było również zapewnienie izolacji procesów obliczeniowych. Logika algorytmów została zaimplementowana w sposób całkowicie bezstanowy (\textit{stateless}), co pozwala na ich uruchamianie w różnych środowiskach bez konieczności modyfikacji kodu źródłowego. Wykorzystanie wzorca \textit{Strategy} umożliwiło dynamiczne przełączanie algorytmów w trakcie działania aplikacji, co jest kluczowe dla scenariuszy porównawczych, gdzie użytkownik chce natychmiast zestawić wyniki sortowania bąbelkowego z szybkim sortowaniem na tym samym zbiorze danych. Ponadto, wdrożono zaawansowany system logowania zdarzeń (\textit{Telemetry}), który w tle zbiera informacje o liczbie operacji porównań i zamian, co służy do późniejszej walidacji poprawności implementacji w obu frameworkach. Tego typu rygor architektoniczny jest niezbędny, aby uniknąć sytuacji, w której jeden z frameworków jest faworyzowany przez bardziej zoptymalizowaną logikę biznesową.
+
 \section{Opis implementacji aplikacji wizualizującej w React}
 Aplikacja w wersji React została zaprojektowana i zrealizowana z wykorzystaniem najnowszych standardów biblioteki w wersji 19 oraz nowoczesnych narzędzi ekosystemu JavaScript, co pozwoliło na stworzenie wydajnego i elastycznego środowiska badawczego. Głównym celem implementacji było wykorzystanie modelu programowania deklaratywnego do opisania skomplikowanych i szybko zmieniających się stanów wizualnych.
 
@@ -734,7 +736,9 @@ Dodatkowo, wykorzystano nową funkcjonalność React 19 — \textit{Transitions 
 
 Warto również zwrócić uwagę na sposób zarządzania listą kluczy (\texttt{key}) w pętlach renderujących. W React 19 poprawiono algorytm \textit{diffingu} w przypadku list. W wizualizatorze, każdy słupek posiada stały unikalny identyfikator, co jest kluczowe dla mechanizmu \textit{Persistence of DOM elements}. Dzięki temu, podczas operacji zamiany dwóch elementów (\texttt{swap}), React nie usuwa i nie tworzy nowych węzłów DOM, lecz jedynie modyfikuje ich parametry wizualne lub używa \textit{CSS Transforms} do przemieszczenia istniejących węzłów. Takie podejście drastycznie redukuje presję na Garbage Collector, co jest widoczne w stabilniejszym przebiegu wykresu użycia pamięci sterty (Heap Memory) w narzędziach Chrome DevTools.
 
-Całkowita separacja fazy obliczeń od fazy prezentacji minimalizuje ryzyko zjawiska \textit{jank}, co jest szczególnie ważne w środowisku takim jak React, gdzie proces odświeżania Virtual DOM generuje stały narzut na CPU. W badaniu monitorowano również parametr \textit{Recalculate Style}, który w wersji React 19 wykazuje mniejszą zmienność dzięki optymalizacjom w silniku Fiber, co bezpośrednio przekłada się na płynność animacji przy wysokich częstotliwościach odświeżania.
+Całkowita separacja fazy obliczeń od fazy prezentacji minimalizuje ryzyko zjawiska \textit{jank}, co jest szczególnie ważne w środowisku takim jak React, gdzie proces odświeżania Virtual DOM generuje stały narzut na CPU. W badaniu monitorowano również parametr \textit{Recalculate Style}, który w wersji React 19 wykazuje mniejszą zmienność dzięki optymalizacjom w silniku Fiber, co bezpośrednio przekłada się na płynność animacji przy wysokich częstoltiwościach odświeżania.
+
+Warto również podkreślić specyficzną dla Reacta charakterystykę zarządzania pamięcią operacyjną. Regularne re-renderowanie komponentów wiąże się z tworzeniem dużej liczby krótkotrwałych obiektów w pamięci (\textit{Garbage Generation}) \cite{High_Perf_JS}. Mimo że silnik V8 w przeglądarce Chrome jest niezwykle efektywny w sprzątaniu tzw. "młodej generacji" obiektów, ciągła alokacja nowych struktur Virtual DOM podczas wizualizacji (np. przy sortowaniu 1000 elementów z opóźnieniem 1ms) generuje zauważalny narzut. W badaniu zaobserwowano, że wykres użycia pamięci w React przypomina klasyczne "zęby piły" — pamięć stale rośnie do pewnego progu, po czym następuje gwałtowny spadek wywołany akcją Garbage Collector. Choć React 19 wprowadza optymalizacje w recyklingu węzłów Fiber, narzut ten jest nieunikniony przy architekturze opartej na niemutowalnym stanie. Z perspektywy sprzętowej, rygorystyczne przestrzeganie zasady \textit{Immutability} wymusza częste kopiowanie dużych tablic danych, co przy bardzo szybkich operacjach może prowadzić do zjawiska \textit{Cache Miss} w procesorze Apple M4 Pro, zmuszając system do częstszego odwoływania się do głównej pamięci RAM.
 
 \section{Opis implementacji aplikacji wizualizującej w Angular}
 Wersja aplikacji przygotowana w frameworku Angular została zaimplementowana z wykorzystaniem najnowszego stabilnego wydania (wersja 19). Pozwoliło to na pełne wykorzystanie rewolucyjnych zmian, jakie zaszły w ekosystemie Angulara w ostatnich miesiącach, szczególnie w obszarze reaktywności oraz drastycznego uproszczenia architektury komponentów, co stawia ten framework w nowym świetle w kontekście wydajności i czytelności kodu \cite{Angular_Docs}.
@@ -791,6 +795,8 @@ Innym przełomowym elementem wpływającym na wydajność w wersji 19 jest nowa 
 
 W wizualizatorze algorytmów, gdzie mamy do czynienia z iteracją po setkach elementów wykresu, \texttt{@for} zapewnia niemal natychmiastowe aktualizacje pozycji. Nowy mechanizm śledzenia zmian (\textit{tracking mechanism}) wymaga podania unikalnego klucza w parametrze \texttt{track}, co pozwala Angularowi na precyzyjne operacje na liście bez konieczności re-renderowania całego zbioru danych. Zjawisko to, w połączeniu z Sygnałami, tworzy synergię, która niemal całkowicie eliminuje operacje na DOM, które nie są bezpośrednio związane z aktualizacją konkretnego, zmienionego elementu. W testach porównawczych pozwala to Angularowi na zachowanie płynności interfejsu nawet przy opóźnieniach rzędu 1ms, gdzie React zaczyna wykazywać oznaki "zadyszki" ze względu na narzut Virtual DOM.
 
+Implementacja w wersji 19 wykazuje również zgoła odmienną charakterystykę pamięciową w porównaniu do modelu opartego na Virtual DOM. Ponieważ Sygnały są stabilnymi referencjami do wartości, a detekcja zmian w trybie \textit{Zoneless} nie wymusza ponownego wykonania całego mechanizmu renderującego, liczba alokowanych obiektów na sekundę jest drastycznie niższa. Wykres zajętości sterty w Angularze jest znacznie bardziej płaski, co sugeruje lepszą przydatność tego frameworka do aplikacji typu „Real-time Dashboard”, gdzie stabilność i przewidywalność są priorytetem. Brak biblioteki Zone.js dodatkowo odciąża pamięć, eliminując konieczność utrzymywania skomplikowanej mapy stref asynchronicznych. Dodatkowo, podejście Angulara oparte na kompilacji do bezpośrednich instrukcji aktualizacji DOM (Ivy) pozwala na lepsze wykorzystanie predykcji skoków w procesorze M4 Pro, co przekłada się na mniejsze zużycie energii i niższą temperaturę pracy urządzenia podczas długotrwałych benchmarków na dużych zbiorach danych.
+
 \section{Metody i procedury pomiarowe dla analizy wydajności}
 Analiza porównawcza wydajności frameworków React i Angular wymaga zastosowania rygorystycznej i powtarzalnej metodologii pomiarowej. Celem badań jest określenie, jak każda z technologii radzi sobie z intensywnym obciążeniem wynikającym z częstych aktualizacji interfejsu użytkownika w procesie wizualizacji algorytmów. Proces ten jest szczególnie wymagający, ponieważ wymaga od silnika przeglądarki stałego balansowania między wykonywaniem skomplikowanej logiki biznesowej (algorytmy sortowania) a odświeżaniem komponentów graficznych w tempie zbliżonym do 60 klatek na sekundę.
 
@@ -827,6 +833,11 @@ Procedura pomiarowa dla każdego ze scenariuszy była rygorystycznie przestrzega
 
 Wszystkie wyniki prezentowane w dalszej części pracy stanowią średnią arytmetyczną z 10 niezależnych pomiarów dla każdego scenariusza. W celu zapewnienia wysokiej wiarygodności statystycznej, dla każdej średniej obliczono również odchylenie standardowe oraz błąd standardowy. Wyniki, w których odchylenie standardowe przekraczało 15% średniej, były odrzucane i powtarzane, aby wyeliminować wpływ nagłych pików obciążenia systemowego działającego w tle. Takie podejście pozwoliło na uzyskanie danych o wysokiej powtarzalności, co jest kluczowe przy wyciąganiu wniosków o subtelnych różnicach między wydajnością React i Angular.
 
+\subsection{Wyzwania w standaryzacji i neutralizacja zmiennych}
+Projektowanie rzetelnego badania dla dwóch tak odmiennych modeli renderowania wiąże się z wyzwaniem tzw. niedopasowania impedancyjnego (\textit{Impedance Mismatch}). Aby zapewnić sprawiedliwość benchmarku, konieczne było zagwarantowanie pełnej parzystości wizualnej — każdy słupek w obu wersjach aplikacji jest renderowany za pomocą identycznej technologii SVG. Standaryzacja polegała na wymuszeniu, aby oba frameworki przetwarzały dokładnie ten sam strumień danych o krokach algorytmu, co pozwoliło na ocenę wewnętrznej sprawności mechanizmów aktualizacji, a nie wydajności samej biblioteki graficznej.
+
+Dodatkowo, podjęto kroki w celu neutralizacji mechanizmów specyficznych dla technologii, które mogłyby zaburzać wyniki. W React 19 kontrolowano mechanizmy asynchronicznego grupowania aktualizacji (\textit{batching}), aby nie poprawiały one sztucznie płynności kosztem precyzji pomiaru czasu rzeczywistego. W Angularze kluczowe było poprawne skonfigurowanie trybu \textit{Zoneless}, aby upewnić się, że zysk wydajności wynika z architektury sygnałowej, a nie z ograniczenia funkcjonalności. Wreszcie, zastosowano asynchroniczny eksport wyników (\textit{background export}) po zakończeniu fazy aktywnej wizualizacji, co pozwoliło odizolować czas czystej pracy frameworka od czasu zapisu danych do pamięci trwałej.
+
 \section{Metody oceny produktywności programistycznej}
 Poza analizą czysto wydajnościową, która skupia się na parametrach technicznych działania aplikacji, niniejsza praca podejmuje próbę kompleksowej oceny obu technologii pod kątem ergonomii pracy i produktywności programisty. Jest to aspekt o znaczeniu strategicznym, często decydujący o długofalowym sukcesie projektu IT oraz kosztach jego utrzymania (\textit{Total Cost of Ownership}). Ocena produktywności jest procesem wielowymiarowym, łączącym twarde dane metryczne z subiektywnym odczuciem tzw. \textit{Developer Experience} (DX).
 
@@ -846,49 +857,7 @@ Ocena jakościowa została oparta na ustrukturyzowanych doświadczeniach zebrany
 
 Ostatnim badanym kryterium była jakość narzędzi diagnostycznych dedykowanych dla deweloperów. Porównano funkcjonalność rozszerzeń takich jak \textit{Angular DevTools} i \textit{React Developer Tools} w kontekście inspekcji stanu animacji w czasie rzeczywistym oraz profilowania zmian widoku. Synteza tych danych pozwoli na sformułowanie wniosków dotyczących tego, który framework lepiej wspiera produktywność v projektach o wysokiej dynamice zmian.
 
-\section{Zrównoważona wydajność i charakterystyka pamięciowa (Memory Footprint)}
-Analizując architekturę obu systemów, nie można pominąć aspektu zarządzania pamięcią operacyjną RAM, który w przypadku wizualizacji o wysokiej częstotliwości ma kluczowe znaczenie dla długofalowej stabilności aplikacji. W badaniu szczególną uwagę poświęcono zjawisku wycieków pamięci (\textit{memory leaks}) oraz częstotliwości pracy mechanizmu Garbage Collector (GC).
-
-\subsection{Analiza cyklu życia obiektów w React 19}
-W modelu Reacta, regularne re-renderowanie komponentów wiąże się z tworzeniem dużej liczby krótkotrwałych obiektów w pamięci (\textit{Garbage Generation}) \cite{High_Perf_JS}. Mimo że silnik V8 w przeglądarce Chrome jest niezwykle efektywny w sprzątaniu tzw. "młodej generacji" obiektów, ciągła alokacja nowych struktur Virtual DOM podczas wizualizacji (np. przy sortowaniu 1000 elementów z opóźnieniem 1ms) generuje zauważalny narzut. W badaniu zauważono, że wykres użycia pamięci w React przypomina "zęby piły" — pamięć stale rośnie do pewnego progu, po czym następuje gwałtowny spadek wywołany akcją GC.
-
-Choć React 19 wprowadza pewne optymalizacje w recyklingu węzłów Fiber, narzut ten jest nieunikniony przy architekturze opartej na funkcjach i niemutowalnym stanie. W praktyce oznacza to, że przy długotrwałych testach (trwających kilkanaście minut), aplikacja w React może wykazywać mikro-przycięcia (\textit{GC pauses}), które są nieobecne w rozwiązaniach drobnoziarnistych \cite{Evaluating_Frameworks}.
-
-\subsection{Model drobnoziarnisty Angulara a stabilność pamięci}
-Angular 19 z Sygnałami prezentuje zgoła odmienną charakterystykę pamięciową. Ponieważ Sygnały są stabilnymi referencjami do wartości, a detekcja zmian nie wymusza ponownego wykonania całego mechanizmu renderującego, liczba alokowanych obiektów na sekundę jest drastycznie niższa (nawet o 60-70% w porównaniu do Reacta). Wykres pamięci w Angularze jest znacznie bardziej płaski, co sugeruje lepszą przydatność tego frameworka do aplikacji typu "Real-time Dashboard", gdzie stabilność i przewidywalność są ważniejsze niż bezwzględna szybkość renderowania pojedynczej klatki.
-
-Brak biblioteki Zone.js dodatkowo odciąża pamięć, ponieważ framework nie musi utrzymywać skomplikowanej mapy "stref" asynchronicznych. W środowisku testowym opartym na procesorze M4 Pro, pozwoliło to na zmniejszenie średniego zużycia pamięci sterty podczas testu obciążeniowego z 45 MB (React) do około 18 MB (Angular), co stanowi znaczącą różnicę w kontekście urządzeń o ograniczonych zasobach.
-
-\subsection{Wnioski z analizy architektonicznej}
-Podsumowując analizę zaimplementowanych rozwiązań, można postawić tezę o "impedancji wydajnościowej" między frameworkami. React 19, mimo doskonałych mechanizmów optymalizacji takich jak \texttt{memo} i \textit{Transitions API}, wciąż pozostaje więźniem własnej architektury opartej na ponownym renderowaniu. Angular 19, dzięki Sygnałom i trybowi Zoneless, dokonał paradygmatycznego przesunięcia w stronę reaktywności drobnoziarnistej, co zbliża go wydajnościowo do rozwiązań typu "Vanilla JS", przy zachowaniu wszystkich zalet wysokopoziomowego frameworka.
-
-Różnice te stają się szczególnie istotne w kontekście nowoczesnego sprzętu. Testy na architekturze ARM (Apple Silicon) pokazały, że Angular lepiej wykorzystuje rdzenie energooszczędne (E-cores) dzięki mniejszej liczbie intensywnych operacji na CPU, podczas gdy React częściej zmusza system do aktywacji rdzeni wydajnościowych (P-cores) w celu szybkiego przeliczenia Virtual DOM.
-
-\section{Analiza paradygmatów programowania a wydajność Runtime}
-Wybór między Reactem a Angularem to nie tylko wybór narzędzia, ale przede wszystkim wybór paradygmatu zarządzania danymi i ich reprezentacją wizualną. W trakcie implementacji obu aplikacji zaobserwowano, jak te paradygmaty wpływają na ostateczną wydajność \textit{Runtime}.
-
-\subsection{Immutable vs Mutable State - wpływ na pamięć cache procesora}
-React opiera się na zasadzie niezmienności stanu (\textit{Immutability}). Każdy krok algorytmu to nowa kopia tablicy. Z punktu widzenia programistycznego jest to podejście niezwykle bezpieczne, ponieważ eliminuje błędy związane z nieoczekiwanymi skutkami ubocznymi. Jednak z punktu widzenia sprzętowego, częste tworzenie nowych kopii dużych tablic (np. 1000 elementów) może prowadzić do zjawiska \textit{Cache Miss} w procesorze. Dane muszą być stale pobierane z wolniejszej pamięci RAM do pamięci podręcznej L1/L2, co przy bardzo szybkich animacjach (1ms) może stać się wąskim gardłem.
-
-Angular, korzystając z Sygnałów, pozwala na bardziej selektywne podejście. Mimo że same wartości w sygnałach również mogą być traktowane jako niezmienne, mechanizm subskrypcji drobnoziarnistej sprawia, że framework nie musi "przeglądać" całej tablicy przy każdej zmianie pojedynczego elementu. Pozwala to na znacznie lepsze wykorzystanie predykcji skoków w procesorze Apple M4 Pro, co przekłada się na mniejsze zużycie energii i niższą temperaturę pracy urządzenia podczas długotrwałych benchmarków.
-
-\subsection{Abstrakcja Virtual DOM vs Kompilacja do Instrukcji Bezpośrednich}
-React 19, mimo ogromnego postępu, wciąż musi utrzymywać kopię drzewa DOM w pamięci JavaScript (Virtual DOM). Proces porównywania dwóch drzew (\textit{diffing}) ma złożoność obliczeniową, która rośnie wraz z liczbą komponentów \cite{VDOM_Efficiency}. W wizualizatorze, gdzie każdy słupek jest komponentem, narzut ten jest mierzalny.
-
-Angular 19, szczególnie w trybie Zoneless, jest kompilowany do zestawu instrukcji, które bezpośrednio aktualizują właściwości węzłów DOM. Można to porównać do różnicy między językiem interpretowanym a skompilowanym do kodu maszynowego. Dokumentacja techniczna i przeprowadzone testy sugerują, że dla aplikacji o ekstremalnie wysokiej częstotliwości zmian (takich jak wizualizacje naukowe czy systemy monitorowania giełdowego), podejście oferowane przez nowoczesny Angular staje się bezkonkurencyjne pod względem efektywności wykorzystania cykli procesora.
-
-\section{Wyzwania w standaryzacji testów międzyframeworkowych}
-Projektowanie rzetelnego badania porównawczego dla dwóch tak skrajnie odmiennych modeli renderowania, jakimi są React (Virtual DOM) oraz Angular (Fine-grained Signals), wiąże się z szeregiem wyzwań metodologicznych. Głównym problemem jest tzw. niedopasowanie impedancyjne (\textit{Impedance Mismatch}) między paradygmatem deklaratywnym a imperatywną naturą wizualizacji algorytmów.
-
-\subsection{Problem parzystości wizualnej i sprawiedliwości benchmarku}
-Aby badanie było sprawiedliwe, konieczne było zapewnienie pełnej parzystości wizualnej. Każdy słupek na wykresie w obu wersjach aplikacji musiał być renderowany za pomocą tej samej technologii podkładowej (SVG). Wyzwanie polegało na tym, że React dąży do minimalizacji zmian w Virtual DOM poprzez proces dyferencjacji (\textit{diffing}), podczas gdy Angular v19, pracując w trybie sygnałowym, całkowicie omija fazę porównywania i precyzyjnie celuje w konkretne atrybuty węzłów DOM. Standaryzacja polegała na wymuszeniu, aby oba frameworki przetwarzały dokładnie ten sam strumień danych o krokach algorytmu, co pozwoliło na ocenę wewnętrznej sprawności mechanizmów aktualizacji, a nie wydajności samej biblioteki graficznej.
-
-\subsection{Neutralizacja wpływu mechanizmów pomocniczych}
-Innym wyzwaniem była neutralizacja wpływu mechanizmów, które są specyficzne dla danego frameworka, ale nie mają bezpośredniego związku z wizualizacją. Przykładowo, React 19 domyślnie wykorzystuje mechanizmy asynchronicznego renderowania i grupowania aktualizacji (\textit{batching}), co mogłoby sztucznie poprawić wyniki płynności kosztem precyzji czasu rzeczywistego. W Angularze wyzwaniem było poprawne skonfigurowanie trybu \textit{Zoneless}, aby upewnić się, że oszczędność wydajności wynika z architektury sygnałowej, a nie z ograniczenia funkcjonalności samej aplikacji. Kluczem do sukcesu było stworzenie identycznych warunków brzegowych dla obu platform, co wymagało głębokiej wiedzy o niskopoziomowym działaniu obu silników.
-
-\subsection{Kwestia statycznej analizy na dużych zbiorach danych}
-W badaniach wydajnościowych na dużych zbiorach danych (powyżej 1000 elementów) pojawia się wyzwanie związane z zarządzaniem cyklem życia obiektów. Zarówno React, jak i Angular muszą radzić sobie z narzutem pamięciowym wynikającym z przechowywania stanów pośrednich algorytmu. Standaryzacja testów wymagała upewnienia się, że proces zbierania danych (\textit{profiling}) sam w sobie nie wprowadza narzutu, który faworyzowałby jeden z frameworków. Rozwiązaniem było zastosowanie asynchronicznego eksportu wyników po zakończeniu fazy aktywnej wizualizacji, co pozwoliło odizolować czas czystej pracy frameworka od czasu zapisu wyników badania.
-
+Warto również zauważyć, że ocena produktywności uwzględniała paradygmat „wolności vs standardu”. W procesie tworzenia wizualizatora w React, deweloper staje przed koniecznością samodzielnego doboru bibliotek do zarządzania stanem asynchronicznym czy obsługi routingu, co przy braku odpowiedniego doświadczenia może prowadzić do powstania długu technicznego. Angular, poprzez swoje podejście „battery-included”, narzuca odgórnie sprawdzone wzorce projektowe, co drastycznie skraca fazę planowania architektury, ale może być postrzegane jako ograniczające przy specyficznych, niskopoziomowych optymalizacjach. W badaniu szczególną uwagę poświęcono temu, jak te dwa podejścia wpływają na czas potrzebny na implementację nowej funkcji – np. dodanie nowego typu algorytmu wizualnego – oraz jak frameworki wspierają refaktoryzację kodu w miarę wzrostu jego złożoności.
 
 \chapter{Prezentacja i analiza wyników badań}
 
