Zmiany po konsultacji z promotorem

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -4,7 +4,7 @@
   author    = "{Google}",
   title     = "{Angular Documentation}",
   howpublished       = {\url{https://angular.io/docs}},
-  note      = "Accessed: 10.01.2026"
+  note      = "Dostęp: 10.01.2026"
 }
 
 @book{RxJS_Action,
@@ -18,7 +18,7 @@
   author    = "{Meta Open Source}",
   title     = "{React Reference: Concurrent Rendering}",
   howpublished       = {\url{https://react.dev/reference/react/useTransition}},
-  note      = "Accessed: 10.01.2026"
+  note      = "Dostęp: 10.01.2026"
 }
 
 @book{Cormen_Intro,
@@ -33,49 +33,49 @@
   author    = "{Google Developers}",
   title     = "{Web Vitals: Essential metrics for a healthy site}",
   howpublished       = {\url{https://web.dev/vitals/}},
-  note      = "Accessed: 15.01.2026"
+  note      = "Dostęp: 15.01.2026"
 }
 
 @misc{ECMAScript_6,
   author    = "{ECMA International}",
   title     = "{ECMAScript 2015 Language Specification}",
   howpublished       = {\url{https://262.ecma-international.org/6.0/}},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @misc{TypeScript_Official,
   author    = "{Microsoft}",
   title     = "{TypeScript: JavaScript with syntax for types}",
   howpublished       = {\url{https://www.typescriptlang.org/}},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @misc{React_Official,
   author    = "{Meta Open Source}",
   title     = "{React: The library for web and native user interfaces}",
   howpublished       = {\url{https://react.dev/}},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @misc{Vite_Official,
   author    = "{Vite Team}",
   title     = "{Vite: Next Generation Frontend Tooling}",
   howpublished       = {\url{https://vitejs.dev/}},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @misc{Tailwind_Official,
   author    = "{Tailwind Labs}",
   title     = "{Tailwind CSS: Rapidly build modern websites without ever leaving your HTML}",
   howpublished       = {\url{https://tailwindcss.com/}},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @misc{Chrome_DevTools_Perf,
   author    = "{Google}",
   title     = "{Analyze runtime performance - Chrome DevTools}",
   howpublished       = {\url{https://developer.chrome.com/docs/devtools/performance}},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @book{React_Up_Running,
@@ -98,14 +98,14 @@
   author    = "{MDN Web Docs}",
   title     = "{JavaScript — Dynamic client-side scripting}",
   howpublished       = {\url{https://developer.mozilla.org/en-US/docs/Learn/JavaScript}},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @misc{SPA_Definition,
   author    = "{MDN Web Docs}",
   title     = "{SPA (Single-page application)}",
   howpublished       = {\url{https://developer.mozilla.org/en-US/docs/Glossary/SPA}},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @book{Eloquent_JS,
@@ -158,42 +158,42 @@
   author    = "{Andrew Clark}",
   title     = "{React Fiber Architecture}",
   url       = {https://github.com/acdlite/react-fiber-architecture},
-  note      = "Accessed: 15.01.2026"
+  note      = "Dostęp: 15.01.2026"
 }
 
 @misc{Angular_Ivy,
   author    = "{Kara Erickson}",
   title     = "{Angular Ivy: A New Engine for a New Era}",
   howpublished       = {\url{https://blog.angular.io/angular-ivy-2cac0139cd95}},
-  note      = "Accessed: 16.01.2026"
+  note      = "Dostęp: 16.01.2026"
 }
 
 @misc{MDN_Event_Loop,
   author    = "{MDN Web Docs}",
   title     = "{The event loop}",
   url       = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Event_loop},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @misc{MDN_Web_Workers,
   author    = "{MDN Web Docs}",
   title     = "{Web Workers API}",
   url       = {https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API},
-  note      = "Accessed: 18.01.2026"
+  note      = "Dostęp: 18.01.2026"
 }
 
 @misc{Google_Rendering_Path,
   author    = "{Ilya Grigorik}",
   title     = "{Critical Rendering Path}",
   url       = {https://web.dev/critical-rendering-path/},
-  note      = "Accessed: 20.01.2026"
+  note      = "Dostęp: 20.01.2026"
 }
 
 @misc{Google_Reflow_Repaint,
   author    = "{Paul Lewis}",
   title     = "{Minimize browser reflow}",
   url       = {https://developers.google.com/speed/docs/insights/browser-reflow},
-  note      = "Accessed: 20.01.2026"
+  note      = "Dostęp: 20.01.2026"
 }
 
 @article{Evaluating_Frameworks,
@@ -210,14 +210,14 @@
   author    = "{Meta Open Source}",
   title     = "{Introducing Hooks}",
   url       = {https://legacy.reactjs.org/docs/hooks-intro.html},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @misc{Angular_Signals_RFC,
   author    = "{Angular Team}",
   title     = "{RFC: Angular Signals}",
   url       = {https://github.com/angular/angular/discussions/49685},
-  note      = "Accessed: 14.01.2026"
+  note      = "Dostęp: 14.01.2026"
 }
 
 @book{Pro_TypeScript,
@@ -248,14 +248,14 @@
   author    = "{Google}",
   title     = "{V8 JavaScript Engine}",
   url       = {https://v8.dev/},
-  note      = "Accessed: 10.01.2026"
+  note      = "Dostęp: 10.01.2026"
 }
 
 @misc{Chrome_Runtime_Performance,
   author    = "{Google}",
   title     = "{Analyze runtime performance}",
   url       = {https://developer.chrome.com/docs/devtools/performance},
-  note      = "Accessed: 22.01.2026"
+  note      = "Dostęp: 22.01.2026"
 }
 
 @book{Algorithms_Unlocked,
@@ -290,7 +290,7 @@
   author    = "{Wojciech Maj}",
   title     = "{React Lifecycle Methods Diagram}",
   url       = {https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/},
-  note      = "Accessed: 12.01.2026"
+  note      = "Dostęp: 12.01.2026"
 }
 
 @book{Flanagan_JS,
@@ -427,3 +427,16 @@
   publisher = "{Packt Publishing}"
 }
 
+@picture{React_VDOM_Process,
+  author    = "{Unknown}",
+  title     = "{React Virtual DOM Update Process}",
+  url       = {https://miro.medium.com/v2/resize:fit:1400/format:webp/0*_C52yYMRTDuMtdBA},
+  note      = "Dostęp: 25.01.2026"
+}
+
+@misc{Angular_Change_Detection,
+  author    = "{Angular Team}",
+  title     = "{Angular Change Detection}",
+  url       = {https://media.beehiiv.com/cdn-cgi/image/fit=scale-down,format=auto,onerror=redirect,quality=80/uploads/asset/file/051c845e-8e6c-4a15-b822-4a6ca3c41ffb/1_6e8V1ciJnfuYLBXywqer6Q.jpg},
+  note      = "Dostęp: 25.01.2026"
+}
